@@ -4,6 +4,7 @@ v0.5.1
   * fixed Meta tab in entry edit not functioning correctly
   * removed t+ notation
 * added LDate formatting options
+* added date to PositionGui
 
 v0.5.0
 * minor bug fixes and optimizations
